# SoftNight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cpp  app.h  color_correction.h  color_settings.h  day_and_night.h  hotkey.cpp  hotkey.h  hotkey_input.cpp  hotkey_input.h  main_window.cpp  main_window.h  resource.h  settings.cpp  settings.h  soft_night.rc  taskbar.cpp  taskbar.h  taskbar_icon.cpp  taskbar_icon.h
